# presentpy

./: .bumpversion.cfg  .gitignore  404.html  Makefile  index.html  mkdocs.yml  ns.py  pyproject.toml  readme.md  tag.py
.github/workflows/: release.yml
configuration-file/: index.html
docs/: configuration-file.md  index.md  supported-content.md
search/: search_index.json
src/presentpy/: __main__.py  code_slide_source.py  constants.py  namespaces.py  notebook_processor.py
src/presentpy/config/: __init__.py  read_only_dot_dict.py
src/presentpy/processors/: __init__.py  script_processor.py
src/presentpy/slide_templates/Template-Dark_pptx/docProps/: core.xml
src/presentpy/slide_templates/Template-Dark_pptx/ppt/: tableStyles.xml
src/presentpy/slide_templates/Template-Dark_pptx/ppt/slideLayouts/: slideLayout10.xml  slideLayout11.xml  slideLayout4.xml  slideLayout6.xml  slideLayout7.xml
src/presentpy/slide_templates/Template-Dark_pptx/ppt/slideLayouts/_rels/: slideLayout3.xml.rels
src/presentpy/slide_templates/Template-Light_pptx/docProps/: app.xml
src/presentpy/slide_templates/Template-Light_pptx/ppt/: presentation.xml
src/presentpy/slide_templates/Template-Light_pptx/ppt/slideLayouts/: slideLayout5.xml  slideLayout6.xml  slideLayout7.xml  slideLayout9.xml
src/presentpy/slide_templates/Template-Light_pptx/ppt/slideMasters/: slideMaster1.xml
src/presentpy/slide_templates/template-dark_pptx/_rels/: .rels
src/presentpy/slide_templates/template-dark_pptx/ppt/: presProps.xml  presentation.xml  viewProps.xml
src/presentpy/slide_templates/template-dark_pptx/ppt/slideLayouts/: slideLayout1.xml  slideLayout12.xml  slideLayout2.xml  slideLayout3.xml  slideLayout5.xml  slideLayout8.xml  slideLayout9.xml
src/presentpy/slide_templates/template-dark_pptx/ppt/slideMasters/: slideMaster1.xml
src/presentpy/slide_templates/template-dark_pptx/ppt/slides/: slide1.xml
src/presentpy/slide_templates/template-light_pptx/: [Content_Types].xml
src/presentpy/slide_templates/template-light_pptx/docProps/: app.xml  core.xml
src/presentpy/slide_templates/template-light_pptx/ppt/_rels/: presentation.xml.rels
src/presentpy/slide_templates/template-light_pptx/ppt/slideLayouts/: slideLayout1.xml  slideLayout10.xml  slideLayout11.xml  slideLayout12.xml  slideLayout2.xml  slideLayout3.xml  slideLayout4.xml  slideLayout8.xml
src/presentpy/slide_templates/template-light_pptx/ppt/slideMasters/_rels/: slideMaster1.xml.rels
src/presentpy/slide_templates/template-light_pptx/ppt/slides/_rels/: slide1.xml.rels
src/presentpy/slide_templates/template-light_pptx/ppt/theme/: theme1.xml
src/presentpy/templates/: __init__.py  content.py  manifest.py  styles.py  xml_file.py
src/presentpy/templates/odp/: content.xml  meta.xml  settings.xml  styles.xml
src/presentpy/writer/: presentation.py  slide_tag.py  slides.py  tag.py  theme.py
src/presentpy/writers/: pptx_writer.py
supported-content/: index.html
tests/: test_code_slide_source.py  test_config.py  test_full.py
tests/assets/: demo.ipynb
tests/files/: demo.ipynb  test.ipynb  test.py  test_nb.py
tests/notebooks/: test.ipynb
tests/outputs/test_odp/: content.xml  meta.xml  settings.xml  styles.xml
tests/writer/: test_namespaces.py  test_tag.py  test_theme.py
utils/: convert_measurements.py  dotpptx.py  format_xml.py  write_configuration_default.py
